Disable jekyll & Lint fixes

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -10,7 +10,6 @@ const metadata = {
 ---
 
 <Layout metadata={metadata}>
-
   <HeroText title="Register Today!" />
 
   <ContactUs
@@ -33,8 +32,7 @@ const metadata = {
       label: 'Message',
     }}
     disclaimer={{
-      label:
-        'I acknowledge and allow Unitee Labs to contact me via provided infomation.',
+      label: 'I acknowledge and allow Unitee Labs to contact me via provided infomation.',
     }}
     description="Our support team typically responds within 24 to 48 business hours."
   />
