--- a/src/components/widgets/Announcement.astro
+++ b/src/components/widgets/Announcement.astro
@@ -9,7 +9,5 @@
     class="dark:bg-slate-700 bg-white/40 dark:text-slate-300 font-semibold px-1 py-0.5 text-xs mr-0.5 rtl:mr-0 rtl:ml-0.5 inline-block"
     >NEW</span
   >
-  <a class="text-muted hover:underline dark:text-slate-400 font-medium"
-    >Mentor Closed Beta is now available! »</a
-  >
+  <a class="text-muted hover:underline dark:text-slate-400 font-medium">Mentor Closed Beta is now available! »</a>
 </div>
