--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,6 @@ const metadata = {
 ---
 
 <Layout metadata={metadata}>
-
   <Hero
     actions={[
       {
@@ -34,14 +33,16 @@ const metadata = {
     ]}
     image={{ src: '~/assets/images/hero-image.png', alt: 'Place Holder Image' }}
   >
-    <Fragment slot="title">
-      Unitee Labs
-    </Fragment>
+    <Fragment slot="title"> Unitee Labs </Fragment>
 
     <Fragment slot="subtitle">
       <span class="hidden sm:inline">
-        <span class="font-semibold">Unitee Labs</span> is a software company, building extensible and production ready applications focused on community management & engagement.</span>
-      <span class="block mb-1 sm:hidden font-bold text-blue-600">Unitee Labs: Community Management and Engagement Apps.</span>
+        <span class="font-semibold">Unitee Labs</span> is a software company, building extensible and production ready applications
+        focused on community management & engagement.</span
+      >
+      <span class="block mb-1 sm:hidden font-bold text-blue-600"
+        >Unitee Labs: Community Management and Engagement Apps.</span
+      >
       Suitable for all types of organizations such as, Education Institutions, Resident Communities, Clubs & Non Profits.
     </Fragment>
   </Hero>
@@ -98,7 +99,7 @@ const metadata = {
       {
         title: 'Offical Branding',
         description:
-          "Have an official app with your logo and colors, to represent your brand/organization professionally.",
+          'Have an official app with your logo and colors, to represent your brand/organization professionally.',
         icon: 'flat-color-icons:approval',
       },
       {
@@ -109,7 +110,8 @@ const metadata = {
       },
       {
         title: 'Affordable Pricing',
-        description: 'Offers competitive pricing plans that provide, making it accessible to a wide range of organizations.',
+        description:
+          'Offers competitive pricing plans that provide, making it accessible to a wide range of organizations.',
         icon: 'flat-color-icons:currency-exchange',
       },
     ]}
@@ -132,13 +134,13 @@ const metadata = {
       {
         title: 'Step 2: <span class="font-medium">Customize</span>',
         description:
-          "Pour your vision into it. Add groups, images, text, and all that jazz to breathe life into your digital space. Remember, you can always change these settings later, so feel free to experiment.",
+          'Pour your vision into it. Add groups, images, text, and all that jazz to breathe life into your digital space. Remember, you can always change these settings later, so feel free to experiment.',
         icon: 'tabler:paint',
       },
       {
         title: 'Step 3: <span class="font-medium">Announce</span>',
         description:
-          "Let your community know about your new application! Simply share your invitation code with the community members. You can always customize your invitation codes to auto join specific groups, and to expire at a certain date and time",
+          'Let your community know about your new application! Simply share your invitation code with the community members. You can always customize your invitation codes to auto join specific groups, and to expire at a certain date and time',
         icon: 'tabler:speakerphone',
       },
       {
@@ -162,7 +164,7 @@ const metadata = {
       {
         title: 'Why Unitee Labs?',
         description:
-          "Unitee Labs is a software company that specializes in building extensible and production-ready applications focused on community management and engagement. Our apps are designed to be user-friendly, customizable, and affordable, making them suitable for all types of organizations.",
+          'Unitee Labs is a software company that specializes in building extensible and production-ready applications focused on community management and engagement. Our apps are designed to be user-friendly, customizable, and affordable, making them suitable for all types of organizations.',
       },
       {
         title: 'What do I need to start?',
@@ -175,9 +177,9 @@ const metadata = {
           "You can customize your app by adding groups, events, announcements, and other content to reflect your organization's identity. The app is designed to be user-friendly, allowing you to easily make changes and updates as needed.",
       },
       {
-        title: "How do I invite my community members?",
+        title: 'How do I invite my community members?',
         description:
-          "You can invite your community members by sharing your unique invitation code. This code allows them to join your app and access the features you have set up. You can customize your invitation codes to auto-join specific groups and set expiration dates.",
+          'You can invite your community members by sharing your unique invitation code. This code allows them to join your app and access the features you have set up. You can customize your invitation codes to auto-join specific groups and set expiration dates.',
       },
       {
         title: 'What if I need help?',
@@ -198,7 +200,7 @@ const metadata = {
     stats={[
       { title: 'Downloads', amount: '132K', icon: 'tabler:download' },
       { title: 'Organizations', amount: '12.4K', icon: 'tabler:building' },
-      { title: 'Users', amount: '52.4K', icon: 'tabler:users' }
+      { title: 'Users', amount: '52.4K', icon: 'tabler:users' },
     ]}
   />
 
@@ -214,7 +216,8 @@ const metadata = {
     ]}
   >
     <Fragment slot="title">
-      Register&nbsp;your&nbsp;<br class="block sm:hidden" /><span class="sm:whitespace-nowrap">Organization Today!</span>
+      Register&nbsp;your&nbsp;<br class="block sm:hidden" /><span class="sm:whitespace-nowrap">Organization Today!</span
+      >
     </Fragment>
 
     <Fragment slot="subtitle">
